deployment/cert-manager/cluster-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: master-ingress-for-cluster-certificate
    namespace: cert-manager
spec:
    tls:
    -   secretName: ${CLUSTER_CERT_SECRET_NAME}
        hosts:
        - 'cluster-master.${CLUSTER_FQN}'
    rules:
    -   host: 'cluster-master.${CLUSTER_FQN}'
